# oscilloscope

./: Cargo.toml
assets/: Chill Beats.mid
src/: app.rs  channel.rs  fps.rs  line.rs  main.rs  wave.rs
