[package]
name = "oscilloscope"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.1"
bevy_prototype_lyon = "0.11.0"
bincode = "1.3.3"
geo = "0.28.0"
rayon = "1.9.0"
rustfft = "6.2.0"
serde = "1.0.197"
soundmaker = { path = "../soundmaker" }
